# mini-jepa-rs

./: .gitignore  README.md  pyproject.toml
rust/mask-cli/: Cargo.toml
rust/mask-cli/src/: main.rs
scripts/: create_dataset.py  create_demo_image.py  generate_python_mask.py  run_demo.py  train.py  visualize_mask.py
src/mini_jepa/: __init__.py  images.py  masks.py  model.py  patches.py  training.py  visualization.py
