[project]
name = "mini-jepa-rs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pillow",
    "torch",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
